Fix layout bugs

--- a/src/components/ExperienceBar/ExperienceBar.module.css
+++ b/src/components/ExperienceBar/ExperienceBar.module.css
@@ -1,6 +1,7 @@
 .experienceBar {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .experienceBar span {
