--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,5 +1,5 @@
 .Container {
-  height: 100vh;
+  /* height: 100vh; */
   max-width: 100vw;
   width: 100%;
   display: flex;
